--- a/index.html
+++ b/index.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JJmovie - 최고 평점 영화 컬렉션</title>
+    <title>JJMovie - 최고 평점 영화 컬렉션</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- header -->
     <header id="header">
-        <h1>JJmovie - 최고 평점 영화 컬렉션</h1>
+        <h1>JakSim3 <span class="intro">최고 평점 영화 컬렉션</span></h1>
+        <!-- 언어 선택 -->
+        <div class="dropBox">
+            <button type="button" class="naBtn" id="nation">국가</button>
+            <div class="dropDown hidden">
+              <button type="button" id="nationBtn">한국</button>
+              <button type="button" id="nationBtn">미국</button>
+              <button type="button" id="nationBtn">중국</button>
+              <button type="button" id="nationBtn">일본</button>
+            </div>
+        </div>
     </header>
 
+    <!-- main -->
     <main>
         <!-- 영화 검색 -->
         <form class="search" action="./index.html" method="POST" onsubmit="movieSearch()">
@@ -22,82 +34,10 @@
         </form>
 
         <!-- 카드 파트 -->
-        <section class="cardList">
-            <div class="movieCard c1" id="">
-                <img src="./images/1.png" alt="" />
-                <h3 class="movieTitle">1. 갯마을 차차차</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c2" id="">
-                <img src="" alt="" />
-                <h3 class="movieTitle">2</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c3" id="">
-                <img src="" alt="" />
-                <h3 class="movieTitle">3</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c4" id="">
-                <img src="" alt="" />
-                <h3 class="movieTitle">4</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c5" id="">
-                <img src="" alt="" />
-                <h3 class="movieTitle">5</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c6" id="">
-                <img src="" alt="" />
-                <h3 class="movieTitle">6</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c7">
-                <img src="" alt="" />
-                <h3 class="movieTitle">7</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c8">
-                <img src="" alt="" />
-                <h3 class="movieTitle">8</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-            <div class="movieCard c9">
-                <img src="" alt="" />
-                <h3 class="movieTitle">9</h3>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur ipsa dicta quasi corporis eius veritatis, quibusdam velit ullam hic eligendi sint sit eos amet illum qui fuga, porro beatae fugit.
-                </p>
-                <p class="rate">Rating : </p>
-            </div>
-        </section>
+        <section class="cardList"></section>
     </main>
 
+    <!-- footer -->
     <footer id="footer">
         <p>made by Jstol</p>
     </footer>
@@ -105,5 +45,6 @@
 
     <!-- script part -->
     <script src="./js/main.js"></script>
+    <script src="./js/movieApi.js"></script>
 </body>
 </html>
